test/parser/ast/pattern/malformed_error1.exp
Error: Unexpected token `/`, expected start of pattern
test/parser/ast/pattern/malformed_error1.myte:4:6
 4 |   val / = 1;
   |       ^